  UiUtil, file chooser now clears the previously selected files properly when selecting files to open or save
  DefaultProperty.validateType() improved error message now includes entityId
  EntityTableModel.set/getRefreshOnForeignKeyConditionValuesSet() added
  SwingEntityTableModel and FXEntityListModel implement the above
  EntityTablePanel, EntityTableView, popup menu controls setup refactored
  TristateCheckBox, FilteredTablePanel, IntegerFieldTest, deprecation warnings fixed
  ResultPacker bug fixed, redundant call to fetch() removed
  Gradle wrapper added
  Database, DatabaseConnections, DefaultDatabaseConnection, LocalEntityConnections, DefaultLocalEntityConnection now document where AuthenticationException is thrown
  TestUtil.getDelimitedString() simplified using String.join()
  ValueObserver added, for read only access to Values, Value.get() and Value.getObserver() moved to ValueObserver, Value extends it
  ValueObserver.getObserver() renamed to getChangeObserver()
  Misc. javadoc fixes and some minor changes
  TableModelProxy removed
  Minor javadoc fixes and getting rid of ret return variable name
  Values.value() overloaded with nullValue parameter, for preventing null values
  Value.isNullable() added, some related refactoring
  Values.valueState() added
  Values.StatValue.set() minor improvement
  ConfigurationStore added
  ConfigurationStore values now set the value to defaultValue when values are set to null
  ConfigurationStore, major refactoring
  ConfigurationStore.getConfigurationValue() added
  ValueParser moved up from Configuration and renamed StringParser
  ConfigurationStore, renamed to PropertyStore, some internal renamings as well as javadoc fixes
  State.isActive() and setActive() renamed to get() and set() respectively
  ValueChange.getOldValue() and getNewValue() renamed to getPreviousValue() and getCurrentValue() respectively
  IntelliJ code analysis based fixes
  StringParser removed, replaced with Function<String, ?>