@@ -5116,3 +5116,4 @@
   ValueChange.getOldValue() and getNewValue() renamed to getPreviousValue() and getCurrentValue() respectively
   IntelliJ code analysis based fixes
   StringParser removed, replaced with Function<String, ?>
+  FileUtil.getBytesFromFile() removed, use Files.readAllBytes()
